@@ -142,7 +142,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.3.0</version>
           <configuration>
-            <argLine>-Dnet.bytebuddy.experimental=true</argLine>
+            <argLine>-Dnet.bytebuddy.experimental=true --add-opens java.base/java.util.zip=ALL-UNNAMED</argLine>
           </configuration>
         </plugin>
       </plugins>
